
5.15
- Just kidding, one more update
- Fixed issue where tall grass wasn't able to be cut on several tilesets

5.20
- Added ability to name mother
- Added text for PC in Rival's house
- Changed dialogue for Rival's brother to match beta
- Fixed "email" to "e-mail" in message from Oak

5.21
- Added Covenant Orb pickups to Boulder Mine B4F, Slowpoke well, and Whirl Island B2F

5.22
- Fixed some coloration issues with docks tileset

5.23
- Fixed more coloration issues with docks tileset that I should have fixed five minutes ago

5.24
- Fixed issue where opposing trainer overworld sprite would turn gray during the transition at start of battle in GBC mode

5.25
- Fixed an instance of "AIDEs" to "AIDES" in a call from PROF.OAK
- Added a function to rename Mother on older save files - Talk to the sign outside of your house to give your mother a name. This can be used to fix a common issue where older save files would show your mom's name as the player's name in the PokeGear phone.

5.30
- Fixed issue where yellow-colored trainers would still appear gray during transition at beginning of battle in GBC mode
- Lots of text consistency fixes. "TRAINER" to "Trainer", "XXX TYPE" to "Xxx-type"

5.31
- Fixed issue where textboxes would appear blue at night while on GBC in GBC mode, now both GBC mode and SGB mode use white textboxes on GBC

5.32
- Fixed issue where tree in Jade Forest could not be cut down

5.33
- Fixed issue where Rival overworld sprite could have graphical glitches during Slowpoke Well encounter
- Made old man in Slowpoke Well walk slower like an old man would
- Added new items pickups to Endon Cave
- Made some more water Pokemon able to learn Waterfall because not having a Pokemon that can learn it is the worst

6.b1
- Mapped out new locations in Ryukyu City

6.b2
- Added scripts for hotel receptionist
- Added Professor Oak battle

6.b3
- Restaurant Game Corner scripts set up
- Theatre scripts and Kimono Girls set up
- Added NPCS to first floor of hotel