@@ -1,7 +1,7 @@
 	tilepal 0, GRAY, BROWN, RED, GRAY, GRAY, GRAY, GRAY, GRAY
-	tilepal 0, GRAY, GRAY, GRAY, GRAY, GRAY, GRAY, BROWN, BROWN
+	tilepal 0, GRAY, GRAY, GRAY, GRAY, GREEN, GREEN, BROWN, BROWN
 	tilepal 0, GRAY, GRAY, RED, GRAY, GRAY, BROWN, WATER, WATER
-	tilepal 0, BROWN, BROWN, GRAY, GRAY, GRAY, GRAY, BROWN, BROWN
+	tilepal 0, BROWN, BROWN, GRAY, GRAY, RED, RED, BROWN, BROWN
 	tilepal 0, GRAY, GRAY, BROWN, BROWN, BROWN, BROWN, GRAY, GRAY
 	tilepal 0, GRAY, GRAY, GRAY, GRAY, GRAY, YELLOW, YELLOW, GRAY
 	tilepal 0, GRAY, GRAY, BROWN, BROWN, BROWN, BROWN, GRAY, GRAY
@@ -9,4 +9,4 @@
 	tilepal 0, GRAY, GRAY, GRAY, GRAY, BROWN, BROWN, BROWN, BROWN
 	tilepal 0, BROWN, BROWN, BROWN, RED, GRAY, GRAY, GRAY, GRAY
 	tilepal 0, GRAY, GRAY, GRAY, GRAY, BROWN, GRAY, GRAY, GRAY
-	tilepal 0, GRAY, GRAY, GRAY, GRAY, GRAY, GRAY, GRAY, GRAY
+	tilepal 0, GRAY, GRAY, GRAY, GRAY, GRAY, GREEN, GREEN, GRAY
