@@ -4,6 +4,14 @@
 	const RYUKYU_RESTAURANT_PRIZE_VENDOR
 	const RYUKYU_RESTAURANT_COIN_VENDOR
 	const RYUKYU_RESTAURANT_BAR
+	const RYUKYU_RESTAURANT_POKEFAN_M
+	const RYUKYU_RESTAURANT_COOLTRAINER_F
+	const RYUKYU_RESTAURANT_COOLTRAINER_M
+	const RYUKYU_RESTAURANT_TWIN
+	const RYUKYU_RESTAURANT_TEACHER
+	const RYUKYU_RESTAURANT_POKEFAN_M2
+	const RYUKYU_RESTAURANT_SUPER_NERD
+	const RYUKYU_RESTAURANT_JANINE
 
 RyukyuRestaurant_MapScripts:
 	db 0 ; scene scripts
@@ -23,6 +31,15 @@ RyukyuRestaurant_MapScripts:
 	appear RYUKYU_RESTAURANT_CLERK_1
 	appear RYUKYU_RESTAURANT_CLERK_2
 	return
+	
+RyukyuRestaurantPokefanMScript:
+	faceplayer
+	opentext
+	writetext RyukyuRestaurantPokefanMText
+	waitbutton
+	closetext
+	turnobject RYUKYU_RESTAURANT_POKEFAN_M, LEFT
+	end
 
 RyukyuRestaurantBarScript:
 	jumptextfaceplayer RyukyuRestaurantBarText
@@ -30,6 +47,26 @@ RyukyuRestaurantBarScript:
 RyukyuRestaurantGameCornerCoinVendorScript:
 	jumpstd GameCornerCoinVendorScript
 	
+RyukyuRestaurantCooltrainerMScript:
+	jumptextfaceplayer RyukyuRestaurantCooltrainerMText
+	
+RyukyuRestaurantCooltrainerFScript:
+	jumptextfaceplayer RyukyuRestaurantCooltrainerFText
+	
+RyukyuRestaurantTwinScript:
+	jumptextfaceplayer RyukyuRestaurantTwinText
+	
+RyukyuRestaurantTeacherScript:
+	jumptextfaceplayer RyukyuRestaurantTeacherText
+	
+RyukyuRestaurantPokefanM2Script:
+	jumptextfaceplayer RyukyuRestaurantPokefanM2Text
+	
+RyukyuRestaurantSuperNerdScript:
+	jumptextfaceplayer RyukyuRestaurantSuperNerdText
+	
+RyukyuRestaurantJanineScript:
+	jumptextfaceplayer RyukyuRestaurantJanineText
 	
 RyukyuRestaurantClerk:
 	jumptextfaceplayer RyukyuRestaurantClerkText
@@ -162,6 +199,52 @@ RyukyuRestaurantGameCornerTMVendorMenuHeader:
 	db "THUNDERSTONE  800@"
 	db "CANCEL@"
 	
+RyukyuRestaurantPokefanM2Text:
+	text "My #MON love"
+	line "the food here"
+	cont "more than I do!"
+	done
+	
+RyukyuRestaurantSuperNerdText:
+	text "This is the best"
+	line "place to eat in"
+	cont "all of NIHON!"
+	done
+	
+RyukyuRestaurantJanineText:
+	text "The service here"
+	line "is as good as the"
+	cont "food is!"
+	done
+	
+RyukyuRestaurantCooltrainerFText:
+	text "Waiter!"
+	para "More water,"
+	line "please!"
+	done
+	
+RyukyuRestaurantCooltrainerMText:
+	text "The food here is"
+	line "delicious!"
+	done
+	
+RyukyuRestaurantTwinText:
+	text "I want a piece"
+	line "of cake!"
+	done
+	
+RyukyuRestaurantTeacherText:
+	text "Be sure to eat"
+	line "your vegetables!"
+	done
+	
+RyukyuRestaurantPokefanMText:
+	text "This machine is"
+	line "lucky!"
+	para "No one else is"
+	line "going to use it!"
+	done
+	
 RyukyuRestaurantTheatreText:
 	text "Downstairs to"
 	line "RYUKYU THEATRE"
@@ -250,9 +333,17 @@ RyukyuRestaurant_MapEvents:
 	bg_event  1, 13, BGEVENT_LEFT, RyukyuRestaurantGameCornerCardFlipMachineScript
 	bg_event 15,  0, BGEVENT_READ, RyukyuRestaurantTheatreScript
 	
-	db 6 ; object events
+	db 14 ; object events
 	object_event 15,  2, SPRITE_CLERK, SPRITEMOVEDATA_STANDING_DOWN, 0, 0, -1, -1, PAL_NPC_BROWN, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantClerk, EVENT_HOTEL_UPSTAIRS_IS_BLOCKED
 	object_event 14,  2, SPRITE_CLERK, SPRITEMOVEDATA_STANDING_DOWN, 0, 0, -1, -1, PAL_NPC_BROWN, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantClerk, EVENT_HOTEL_UPSTAIRS_IS_BLOCKED
 	object_event  0,  6, SPRITE_RECEPTIONIST, SPRITEMOVEDATA_STANDING_RIGHT, 0, 0, -1, -1, PAL_NPC_BLUE, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantGameCornerTMVendorScript, -1
 	object_event  0,  7, SPRITE_CLERK, SPRITEMOVEDATA_STANDING_RIGHT, 0, 0, -1, -1, PAL_NPC_ORANGE, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantGameCornerCoinVendorScript, -1
-	object_event  6,  1, SPRITE_RECEPTIONIST, SPRITEMOVEDATA_STANDING_DOWN, 0, 0, -1, -1, PAL_NPC_YELLOW, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantBarScript, -1
+	object_event  5,  1, SPRITE_RECEPTIONIST, SPRITEMOVEDATA_STANDING_DOWN, 0, 0, -1, -1, PAL_NPC_YELLOW, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantBarScript, -1
+	object_event  2, 12, SPRITE_POKEFAN_M, SPRITEMOVEDATA_STANDING_LEFT, 0, 0, -1, -1, PAL_NPC_GREEN, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantPokefanMScript, -1
+	object_event  5, 13, SPRITE_COOLTRAINER_F, SPRITEMOVEDATA_STANDING_RIGHT, 0, 0, -1, -1, PAL_NPC_BLUE, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantCooltrainerFScript, -1
+	object_event  8, 13, SPRITE_COOLTRAINER_M, SPRITEMOVEDATA_STANDING_LEFT, 0, 0, -1, -1, PAL_NPC_RED, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantCooltrainerMScript, -1
+	object_event  7, 10, SPRITE_TWIN, SPRITEMOVEDATA_STANDING_UP, 0, 0, -1, -1, PAL_NPC_GREEN, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantTwinScript, -1
+	object_event  5,  9, SPRITE_TEACHER, SPRITEMOVEDATA_STANDING_RIGHT, 0, 0, -1, -1, PAL_NPC_YELLOW, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantTeacherScript, -1
+	object_event 11, 10, SPRITE_POKEFAN_M, SPRITEMOVEDATA_STANDING_RIGHT, 0, 0, -1, -1, PAL_NPC_ORANGE, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantPokefanM2Script, -1
+	object_event 12,  4, SPRITE_SUPER_NERD, SPRITEMOVEDATA_STANDING_LEFT, 0, 0, -1, -1, PAL_NPC_RED, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantSuperNerdScript, -1
+	object_event 14, 10, SPRITE_JANINE, SPRITEMOVEDATA_STANDING_LEFT, 0, 0, -1, -1, PAL_NPC_GREEN, OBJECTTYPE_SCRIPT, 0, RyukyuRestaurantJanineScript, -1
